# emailRefactor

./: .env  .tauri-key.private  .tauri-key.private.pub  README.md  generate-key.ps1  increment-version.ps1  index.html  latest.json  latest.json.backup  package-lock.json  package.json  release-log-1.0.0.txt  release.ps1  rename-installer.js  save-updater-files.js  set-test-version.ps1  updater-files.json  vite.config.js
.tauri/: updater.key  updater.key.pub
src/: App.css  App.jsx
src-tauri/: Cargo.toml  tauri.conf.json  updater-log.txt
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/components/: InfoButton.jsx  PresetSelector.jsx
